Update signin.css, add role to session in signin.php

--- a/css/signin.css
+++ b/css/signin.css
@@ -28,13 +28,21 @@ body {
 .form-signin .form-control:focus {
   z-index: 2;
 }
-/*.form-signin input[type="email"] {
+
+.form-signin input {
   margin-bottom: -1px;
-  border-bottom-right-radius: 0;
-  border-bottom-left-radius: 0;
-}
-.form-signin input[type="password"] {
-  margin-bottom: 10px;
   border-top-left-radius: 0;
   border-top-right-radius: 0;
-}*/
+  border-bottom-left-radius: 0;
+  border-bottom-right-radius: 0;
+}
+
+.form-signin input.form-first-item {
+  border-top-right-radius: 5;
+  border-top-left-radius: 5;
+}
+.form-signin input.form-last-item {
+  margin-bottom: 10px;
+  border-bottom-left-radius: 5;
+  border-bottom-right-radius: 5;
+}
